package com.eventmanagment.backend.reservation;

public enum ReservationStatus {
    EN_ATTENTE,
    ACCEPTEE,
    REFUSEE
}
