package com.eventmanagment.backend.user;

public enum Role {
    ORGANISATEUR,
    PRESTATAIRE,
    ADMIN
}
